--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -106,7 +106,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.4.3.RELEASE
+      version: 1.4.4.RELEASE
       modules:
         - spring-amqp
         - spring-erlang
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.3.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.3.RELEASE
+      version: 1.2.4.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -304,7 +304,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.1.2.RELEASE
+      version: 4.1.3.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
