--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -50,7 +50,7 @@
 
 		<spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.4.RELEASE</spring-data-hadoop.version>
-		<spring-ldap.version>2.0.3.CI-SNAPSHOT</spring-ldap.version>
+		<spring-ldap.version>2.0.3.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.2.RELEASE</spring-retry.version>
 		<spring-security-oauth.version>2.0.7.RELEASE</spring-security-oauth.version>
