--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -167,6 +167,7 @@
 		<quartz.version>2.2.1</quartz.version>
 		<querydsl.version>3.6.2</querydsl.version>
 		<rabbit-amqp-client.version>3.4.4</rabbit-amqp-client.version>
+		<rabbit-http-client.version>1.0.0.M1</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0.RC5</reactive-streams.version>
 		<rometools.version>1.5.0</rometools.version>
 		<smack.version>3.2.1</smack.version>
@@ -542,6 +543,11 @@
 				<groupId>com.rabbitmq</groupId>
 				<artifactId>amqp-client</artifactId>
 				<version>${rabbit-amqp-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.rabbitmq</groupId>
+				<artifactId>http-client</artifactId>
+				<version>${rabbit-http-client.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.rometools</groupId>
