--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -158,7 +158,7 @@
 		<objenesis.version>2.1</objenesis.version>
 		<ognl.version>2.6.11</ognl.version>
 		<openid4java.version>0.9.6</openid4java.version>
-		<paho-mqtt-client.version>0.4.0</paho-mqtt-client.version>
+		<paho-mqttv3-client.version>1.0.2</paho-mqttv3-client.version>
 		<pig.version>0.12.1</pig.version>
 		<poi.version>3.11</poi.version>
 		<protobuf.version>2.5.0</protobuf.version>
@@ -1127,8 +1127,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.paho</groupId>
-				<artifactId>mqtt-client</artifactId>
-				<version>${paho-mqtt-client.version}</version>
+				<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+				<version>${paho-mqttv3-client.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
