--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -169,6 +169,7 @@
 		<ognl.version>2.6.11</ognl.version>
 		<openid4java.version>0.9.6</openid4java.version>
 		<paho-mqtt-client.version>0.4.0</paho-mqtt-client.version>
+		<paho-mqttv3-client.version>1.0.2</paho-mqttv3-client.version>
 		<pig.version>0.12.1</pig.version>
 		<poi.version>3.10.1</poi.version>
 		<protobuf.version>2.5.0</protobuf.version>
@@ -1180,6 +1181,11 @@
 				<groupId>org.eclipse.paho</groupId>
 				<artifactId>mqtt-client</artifactId>
 				<version>${paho-mqtt-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.paho</groupId>
+				<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+				<version>${paho-mqttv3-client.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
