--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -106,7 +106,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.4.4.RELEASE
+      version: 1.4.5.RELEASE
       modules:
         - spring-amqp
         - spring-erlang
@@ -304,7 +304,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.1.3.RELEASE
+      version: 4.1.4.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -441,7 +441,7 @@ platform_definition:
         checkout: 1.0.0.RELEASE
     - name: Spring Social
       groupId: org.springframework.social
-      version: 1.1.0.RELEASE
+      version: 1.1.1.RELEASE
       modules:
         - spring-social-config
         - spring-social-core
@@ -552,6 +552,7 @@ platform_definition:
       - 'net.java.dev.rome:rome-fetcher'
       - 'org.apache.cassandra:cassandra-all'
       - 'org.apache.directory.server:apacheds-all'
+      - 'org.eclipse.paho:mqtt-client'
       - 'org.glassfish.tyrus:tyrus-websocket-core'
       - 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api'
       - 'org.igniterealtime.smack:smackx'
