--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -147,6 +147,7 @@
 		<lombok.version>1.14.8</lombok.version>
 		<mockito.version>1.10.8</mockito.version>
 		<myfaces.version>2.1.17</myfaces.version>
+		<okhttp.version>2.3.0</okhttp.version>
 		<openhft-chronicle.version>3.4.3</openhft-chronicle.version>
 		<openhft-lang.version>6.6.4</openhft-lang.version>
 		<openjpa.version>2.3.0</openjpa.version>
@@ -562,6 +563,11 @@
 				<groupId>com.splunk</groupId>
 				<artifactId>splunk</artifactId>
 				<version>${splunk.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.okhttp</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>${okhttp.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.sun</groupId>
