--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -186,6 +186,7 @@
 		<tyrus.version>1.3.5</tyrus.version>
 		<typica.version>1.3</typica.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
+		<webjars-locator.version>0.22</webjars-locator.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
 		<woodstox.version>4.2.1</woodstox.version>
 		<wss4j.version>1.6.18</wss4j.version>
@@ -1181,11 +1182,6 @@
 				<version>${hamcrest.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-core</artifactId>
-				<version>${hibernate.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
 				<artifactId>smack</artifactId>
 				<version>${smack.version}</version>
@@ -1294,6 +1290,11 @@
 				<groupId>org.threeten</groupId>
 				<artifactId>threetenbp</artifactId>
 				<version>${threetenbp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>webjars-locator</artifactId>
+				<version>${webjars-locator.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.xerial.snappy</groupId>
