--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.4.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.4.BUILD-SNAPSHOT
+      version: 1.2.4.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
