--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -53,7 +53,6 @@
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-ldap.version>2.0.3.RELEASE</spring-ldap.version>
 		<spring-retry.version>1.1.2.RELEASE</spring-retry.version>
-		<spring-security-oauth.version>2.0.7.RELEASE</spring-security-oauth.version>
 		<spring-session.version>1.0.1.RELEASE</spring-session.version>
 		<spring-web-flow.version>2.4.1.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
@@ -186,6 +185,7 @@
 		<tyrus.version>1.3.5</tyrus.version>
 		<typica.version>1.3</typica.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
+		<webjars-hal-browser.version>b7669f1-1</webjars-hal-browser.version>
 		<webjars-locator.version>0.22</webjars-locator.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
 		<woodstox.version>4.2.1</woodstox.version>
@@ -324,18 +324,6 @@
 				<groupId>org.springframework.retry</groupId>
 				<artifactId>spring-retry</artifactId>
 				<version>${spring-retry.version}</version>
-			</dependency>
-
-			<!-- Spring Security OAuth -->
-			<dependency>
-				<groupId>org.springframework.security.oauth</groupId>
-				<artifactId>spring-security-oauth</artifactId>
-				<version>${spring-security-oauth.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security.oauth</groupId>
-				<artifactId>spring-security-oauth2</artifactId>
-				<version>${spring-security-oauth.version}</version>
 			</dependency>
 
 			<!-- Spring Session -->
@@ -1290,6 +1278,11 @@
 				<groupId>org.threeten</groupId>
 				<artifactId>threetenbp</artifactId>
 				<version>${threetenbp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>hal-browser</artifactId>
+				<version>${webjars-hal-browser.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId>
