--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -136,6 +136,7 @@ platform_definition:
         - spring-boot-cli
         - spring-boot-configuration-processor
         - spring-boot-dependencies
+        - spring-boot-devtools
         - spring-boot-loader
         - spring-boot-loader-tools
         - spring-boot-maven-plugin
@@ -144,6 +145,7 @@ platform_definition:
         - spring-boot-starter-amqp
         - spring-boot-starter-aop
         - spring-boot-starter-batch
+        - spring-boot-starter-cache
         - spring-boot-starter-cloud-connectors
         - spring-boot-starter-data-elasticsearch
         - spring-boot-starter-data-gemfire
@@ -195,40 +197,45 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.2.0.RELEASE
+      version: 1.3.0.M1
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.10.0.RELEASE
+      version: 1.11.0.M1
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.3.0.RELEASE
+      version: 1.4.0.M1
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.2.0.RELEASE
+      version: 1.3.0.M1
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.6.0.RELEASE
+      version: 1.7.0.M1
       modules:
         - spring-data-gemfire
       build:
         repository: https://github.com/spring-projects/spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.8.0.RELEASE
+      version: 1.9.0.M1
       modules:
         - spring-data-jpa
+    - name: Spring Data Key Value
+      groupId: org.springframework.data
+      version: 1.0.0.M1
+      modules:
+        - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.7.0.RELEASE
+      version: 1.8.0.M1
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -236,30 +243,31 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.3.0.RELEASE
+      version: 3.4.0.M1
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.5.0.RELEASE
+      version: 1.6.0.M1
       build:
         repository: https://github.com/spring-projects/spring-data-redis
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.3.0.RELEASE
+      version: 2.4.0.M1
       modules:
         - spring-data-rest-core
+        - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.4.0.RELEASE
+      version: 1.5.0.M1
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.RC1
       modules:
         - spring-aop
         - spring-aspects
@@ -305,7 +313,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.M1
       build:
         compileWith: jdk8
         runTestsWith:
@@ -334,6 +342,7 @@ platform_definition:
         - spring-integration-scripting
         - spring-integration-security
         - spring-integration-sftp
+        - spring-integration-stomp
         - spring-integration-stream
         - spring-integration-syslog
         - spring-integration-test
@@ -493,7 +502,7 @@ platform_definition:
         - spring-ws-test
         - spring-xml
   dependency_mappings:
-    'org.apache.geronimo.specs:geronimo-jta_1.1_spec': 'javax.transaction:javax.transaction-api' # See https://github.com/spring-projects/spring-data-neo4j/issues/272
+    'javax.transaction:transaction-api': 'javax.transaction:javax.transaction-api' # See https://github.com/spring-projects/spring-data-neo4j/issues/272
     'javax.servlet:jsp-api': 'javax.servlet.jsp:javax.servlet.jsp-api'
     'javax.servlet:servlet-api': 'javax.servlet:javax.servlet-api'
     'org.apache.tomcat:catalina': 'org.apache.tomcat:tomcat-catalina'
