--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -57,7 +57,7 @@ platform_definition:
         checkout: 3.0.4.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.0.BUILD-SNAPSHOT
+      version: 1.3.0.M1
       modules:
         - spring-boot
         - spring-boot-actuator
