--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -45,6 +45,7 @@
 	</developers>
 
 	<properties>
+		<spring-batch-admin.version>2.0.0.M1</spring-batch-admin.version>
 		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
 		<spring-integration-java-dsl.version>1.0.1.RELEASE</spring-integration-java-dsl.version>
 		<spring-integration-kafka.version>1.2.0.RELEASE</spring-integration-kafka.version>
@@ -193,6 +194,23 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- Spring Batch Admin -->
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-admin-domain</artifactId>
+				<version>${spring-batch-admin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-admin-manager</artifactId>
+				<version>${spring-batch-admin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-admin-resources</artifactId>
+				<version>${spring-batch-admin.version}</version>
+			</dependency>
 
 			<!-- Spring Integration Flow -->
 			<dependency>
@@ -1218,15 +1236,15 @@
 
 	<profiles>
 		<profile>
-			<id>spring-snapshots</id>
+			<id>spring-milestones</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/milestone</url>
+					<id>spring-milestones</id>
+					<name>Spring Milestones</name>
+					<url>http://repo.spring.io/libs-milestone</url>
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
