--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -122,6 +122,7 @@
 		<jettison.version>1.2</jettison.version>
 		<jibx.version>1.2.6</jibx.version>
 		<jline.version>2.11</jline.version>
+		<joda-time.version>2.8.1</joda-time.version>
 		<jopt-simple.version>4.8</jopt-simple.version>
 		<jredis.version>06052013</jredis.version>
 		<jruby.version>1.7.19</jruby.version>
