--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.M1</version>
+		<version>1.3.0.BUILD-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -51,8 +51,6 @@
 		<spring-integration-kafka.version>1.2.0.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-ldap.version>2.0.3.RELEASE</spring-ldap.version>
-		<spring-retry.version>1.1.2.RELEASE</spring-retry.version>
-		<spring-session.version>1.0.1.RELEASE</spring-session.version>
 		<spring-web-flow.version>2.4.1.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
@@ -122,7 +120,6 @@
 		<jettison.version>1.2</jettison.version>
 		<jibx.version>1.2.6</jibx.version>
 		<jline.version>2.11</jline.version>
-		<joda-time.version>2.8.1</joda-time.version>
 		<jopt-simple.version>4.8</jopt-simple.version>
 		<jredis.version>06052013</jredis.version>
 		<jruby.version>1.7.19</jruby.version>
@@ -277,25 +274,6 @@
 				<groupId>org.springframework.plugin</groupId>
 				<artifactId>spring-plugin-metadata</artifactId>
 				<version>${spring-plugin.version}</version>
-			</dependency>
-
-			<!-- Spring Retry -->
-			<dependency>
-				<groupId>org.springframework.retry</groupId>
-				<artifactId>spring-retry</artifactId>
-				<version>${spring-retry.version}</version>
-			</dependency>
-
-			<!-- Spring Session -->
-			<dependency>
-				<groupId>org.springframework.session</groupId>
-				<artifactId>spring-session</artifactId>
-				<version>${spring-session.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.session</groupId>
-				<artifactId>spring-session-data-redis</artifactId>
-				<version>${spring-session.version}</version>
 			</dependency>
 
 			<!-- Spring Web Flow -->
@@ -1237,15 +1215,15 @@
 
 	<profiles>
 		<profile>
-			<id>spring-milestones</id>
+			<id>spring-snapshots</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>http://repo.spring.io/libs-milestone</url>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot</url>
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
