--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.5
+      version: 1.8.6
       modules:
         - aspectjweaver
         - aspectjtools
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.4.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.4.RELEASE
+      version: 1.2.5.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -258,7 +258,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.1.6.RELEASE
+      version: 4.1.7.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -304,7 +304,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.1.4.RELEASE
+      version: 4.1.5.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -387,7 +387,7 @@ platform_definition:
        - springloaded
     - name: Spring Mobile
       groupId: org.springframework.mobile
-      version: 1.1.3.RELEASE
+      version: 1.1.4.RELEASE
       modules:
         - spring-mobile-device
     - name: Spring Plugin
