--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 2.0.3.RELEASE
+      version: 2.0.4.RELEASE
       modules:
         - reactor-bus
         - reactor-core
@@ -25,7 +25,7 @@ platform_definition:
            - jdk8
     - name: Reactor Spring
       groupId: io.projectreactor.spring
-      version: 2.0.3.RELEASE
+      version: 2.0.4.RELEASE
       modules:
         - reactor-spring-context
         - reactor-spring-core
@@ -136,28 +136,28 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.3.0.BUILD-SNAPSHOT
+      version: 1.3.0.M1
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.11.0.BUILD-SNAPSHOT
+      version: 1.11.0.M1
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.4.0.BUILD-SNAPSHOT
+      version: 1.4.0.M1
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.3.0.BUILD-SNAPSHOT
+      version: 1.3.0.M1
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.7.0.BUILD-SNAPSHOT
+      version: 1.7.0.M1
       modules:
         - spring-data-gemfire
       build:
@@ -165,17 +165,17 @@ platform_definition:
         tagPrefix:
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.9.0.BUILD-SNAPSHOT
+      version: 1.9.0.M1
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.0.0.BUILD-SNAPSHOT
+      version: 1.0.0.M1
       modules:
         - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.8.0.BUILD-SNAPSHOT
+      version: 1.8.0.M1
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -183,12 +183,12 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.4.0.BUILD-SNAPSHOT
+      version: 3.4.0.M1
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.6.0.BUILD-SNAPSHOT
+      version: 1.6.0.M1
       build:
         repository: https://github.com/spring-projects/spring-data-redis
         tagPrefix:
@@ -196,14 +196,14 @@ platform_definition:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.4.0.BUILD-SNAPSHOT
+      version: 2.4.0.M1
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.5.0.BUILD-SNAPSHOT
+      version: 1.5.0.M1
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -237,7 +237,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.M2
       build:
         compileWith: jdk8
         runTestsWith:
@@ -385,6 +385,8 @@ platform_definition:
     - name: Spring Social
       groupId: org.springframework.social
       version: 1.1.2.RELEASE
+      build:
+        repository: https://github.com/spring-projects/spring-social
       modules:
         - spring-social-config
         - spring-social-core
@@ -393,6 +395,8 @@ platform_definition:
     - name: Spring Social Facebook
       groupId: org.springframework.social
       version: 2.0.1.RELEASE
+      build:
+        repository: https://github.com/spring-projects/spring-social-facebook
       modules:
         - spring-social-facebook
         - spring-social-facebook-web
@@ -404,6 +408,8 @@ platform_definition:
     - name: Spring Social Twitter
       groupId: org.springframework.social
       version: 1.1.0.RELEASE
+      build:
+        repository: https://github.com/spring-projects/spring-social-twitter
       modules:
         - spring-social-twitter
     - name: Spring Web Flow
