--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -63,6 +63,7 @@ platform_definition:
         - spring-boot-actuator-docs
         - spring-boot-autoconfigure
         - spring-boot-cli
+        - spring-boot-configuration-metadata
         - spring-boot-configuration-processor
         - spring-boot-dependencies
         - spring-boot-devtools
@@ -136,28 +137,28 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.3.0.M1
+      version: 1.3.0.BUILD-SNAPSHOT
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.11.0.M1
+      version: 1.11.0.BUILD-SNAPSHOT
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.4.0.M1
+      version: 1.4.0.BUILD-SNAPSHOT
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.3.0.M1
+      version: 1.3.0.BUILD-SNAPSHOT
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.7.0.M1
+      version: 1.7.0.BUILD-SNAPSHOT
       modules:
         - spring-data-gemfire
       build:
@@ -165,17 +166,17 @@ platform_definition:
         tagPrefix:
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.9.0.M1
+      version: 1.9.0.BUILD-SNAPSHOT
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.0.0.M1
+      version: 1.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.8.0.M1
+      version: 1.8.0.BUILD-SNAPSHOT
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -183,12 +184,12 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.4.0.M1
+      version: 3.4.0.BUILD-SNAPSHOT
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.6.0.M1
+      version: 1.6.0.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-data-redis
         tagPrefix:
@@ -196,14 +197,14 @@ platform_definition:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.4.0.M1
+      version: 2.4.0.BUILD-SNAPSHOT
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.5.0.M1
+      version: 1.5.0.BUILD-SNAPSHOT
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -327,7 +328,7 @@ platform_definition:
        - springloaded
     - name: Spring Mobile
       groupId: org.springframework.mobile
-      version: 1.1.4.RELEASE
+      version: 1.1.5.RELEASE
       modules:
         - spring-mobile-device
     - name: Spring Plugin
