--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -92,6 +92,7 @@
 		<hbase.version>0.96.2-hadoop2</hbase.version>
 		<hessian.version>4.0.38</hessian.version>
 		<hive.version>0.12.0</hive.version>
+		<htmlunit.version>2.18</htmlunit.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
 		<jackson1.version>1.9.13</jackson1.version>
@@ -159,6 +160,7 @@
 		<rabbit-http-client.version>1.0.0.M1</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0.RC5</reactive-streams.version>
 		<rometools.version>1.5.0</rometools.version>
+		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
 		<smack.version>3.2.1</smack.version>
 		<smack4.version>4.0.6</smack4.version>
 		<snappy.version>1.1.1.6</snappy.version>
@@ -711,6 +713,11 @@
 				<version>${openhft-lang.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>net.sourceforge.htmlunit</groupId>
+				<artifactId>htmlunit</artifactId>
+				<version>${htmlunit.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
 				<artifactId>jasperreports</artifactId>
 				<version>${jasperreports.version}</version>
@@ -1099,6 +1106,11 @@
 				<groupId>org.reactivestreams</groupId>
 				<artifactId>reactive-streams</artifactId>
 				<version>${reactive-streams.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.seleniumhq.selenium</groupId>
+				<artifactId>selenium-htmlunit-driver</artifactId>
+				<version>${selenium-htmlunit-driver.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.skyscreamer</groupId>
