Align with latest Spring Boot 1.3.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -209,7 +209,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.RELEASE
       modules:
         - spring-aop
         - spring-aspects
